--- a/FIC/stvqa/stvqa.ipynb
+++ b/FIC/stvqa/stvqa.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "1e6bd288-ee75-45d8-b348-565682bea6b7",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "28596879-5689-4d48-baee-4cf56eaa9d3d",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "54215d2c-6e8c-497b-9891-806eefa64a4c",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,10 @@
     "    with open(f\"{split}_task_{task}.json\", 'r') as f:\n",
     "        data = json.load(f)['data']\n",
     "    for sample in data:\n",
-    "        path.append(f\"ST-VQA/{sample['file_path']}\")\n",
+    "        if i_split == 0:\n",
+    "            path.append(f\"ST-VQA/{sample['file_path']}\")\n",
+    "        else:\n",
+    "            path.append(f\"test_task{task}_imgs/{sample['file_path']}\")\n",
     "        question.append(sample['question'])\n",
     "        dictionary.append(sample['dictionary'])\n",
     "        if i_split == 1:\n",
@@ -210,125 +213,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "d03a224b-8e64-4aeb-9e95-86f45c0b9bde",
+   "execution_count": 4,
+   "id": "61f26243-0ed2-4f29-b4c7-05364e45c8a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_image(sample):\n",
+    "    with open(sample['path'], 'rb') as f:\n",
+    "        buff = io.BytesIO(f.read()).getbuffer()\n",
+    "    return {\n",
+    "        'image': buff\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "954e38b9-bf1a-4aff-af3f-5cb3bdd65aec",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae359bf22b924281801249883084c529",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "{'path': 'ST-VQA/coco-text/COCO_train2014_000000347021.jpg',\n",
-       " 'question': 'What is the book authors first name?',\n",
-       " 'dictionary': ['john',\n",
-       "  'around',\n",
-       "  'still',\n",
-       "  'bridge',\n",
-       "  'began',\n",
-       "  'country',\n",
-       "  'century',\n",
-       "  'susan',\n",
-       "  'germany',\n",
-       "  'general',\n",
-       "  'service',\n",
-       "  'end',\n",
-       "  'building',\n",
-       "  'several',\n",
-       "  'long',\n",
-       "  'use',\n",
-       "  'museum',\n",
-       "  'train',\n",
-       "  'glenda',\n",
-       "  'school',\n",
-       "  'often',\n",
-       "  'image',\n",
-       "  'main',\n",
-       "  'force',\n",
-       "  'major',\n",
-       "  'national',\n",
-       "  'star',\n",
-       "  'south',\n",
-       "  'sharie',\n",
-       "  'near',\n",
-       "  'blackmore',\n",
-       "  'island',\n",
-       "  'town',\n",
-       "  'four',\n",
-       "  'form',\n",
-       "  'will',\n",
-       "  'like',\n",
-       "  'river',\n",
-       "  'second',\n",
-       "  'although',\n",
-       "  'air',\n",
-       "  'united',\n",
-       "  'people',\n",
-       "  'high',\n",
-       "  'right',\n",
-       "  'last',\n",
-       "  'side',\n",
-       "  'point',\n",
-       "  'german',\n",
-       "  'american',\n",
-       "  'car',\n",
-       "  'park',\n",
-       "  'number',\n",
-       "  'government',\n",
-       "  'french',\n",
-       "  'mitzi',\n",
-       "  'march',\n",
-       "  'east',\n",
-       "  'group',\n",
-       "  'land',\n",
-       "  'found',\n",
-       "  'site',\n",
-       "  'series',\n",
-       "  'west',\n",
-       "  'france',\n",
-       "  'team',\n",
-       "  'following',\n",
-       "  'built',\n",
-       "  'army',\n",
-       "  'king',\n",
-       "  'company',\n",
-       "  'based',\n",
-       "  'university',\n",
-       "  'great',\n",
-       "  'member',\n",
-       "  'water',\n",
-       "  'day',\n",
-       "  'place',\n",
-       "  'left',\n",
-       "  'party',\n",
-       "  'life',\n",
-       "  'order',\n",
-       "  'house',\n",
-       "  'system',\n",
-       "  'even',\n",
-       "  'international',\n",
-       "  'due',\n",
-       "  'power',\n",
-       "  'military',\n",
-       "  'small',\n",
-       "  'race',\n",
-       "  'large',\n",
-       "  'population',\n",
-       "  'now',\n",
-       "  'region',\n",
-       "  'wandie',\n",
-       "  'north',\n",
-       "  'since',\n",
-       "  'work',\n",
-       "  'british'],\n",
-       " 'answer': ['Susan']}"
+       "Uploading the dataset shards:   0%|          | 0/6 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 71,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2911f2db3bab4230b97189894fd4d720",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4346 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c40c74dcc34b4b1283d0fc311ca26e6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/44 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18b1383ad5a147fab697e5925d4df860",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4346 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "518bbea0cd354440927bed969b453e6f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/44 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3d4e982c98a48a2bb0e4832d110ee11",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4346 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "50377d099beb498e896df3905f629cb1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/44 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42de1141874146d8a09322b39d269de2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4346 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e22e44f98ff1417ca94cefb137502a3f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/44 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86311691d43e46c3811db23c906b433b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4345 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d0717ff40e542438d7d9d6a0f921aaf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/44 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af502694a2c84ea6bcaba332f514f151",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4345 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a7f519f87d0429d9922026898c1df5a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/44 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ae8d3f341d649038c94cd23cf8d62de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4102 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f7eb1a9244e4ab8b041b4e14f7e45c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4d8e566e9064e7487a96995c6fa5060",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4102 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3d245b0bf8c4778a38bb5b4d911ce05",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/42 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0f28b19f87e4de4b6d805440031b07f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/440 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "stvqa_task1[0][0]"
+    "for i_split, split in enumerate(splits):\n",
+    "    ds = stvqa_task1[i_split].map(load_image, writer_batch_size=64, cache_file_name=f\"{split}.cache\")\n",
+    "    ds = ds.cast_column('image', Image())\n",
+    "    ds.push_to_hub(\"danjacobellis/stvqa_task1\", split=split)"
    ]
   }
  ],
