--- a/FIC/stvqa/stvqa.ipynb
+++ b/FIC/stvqa/stvqa.ipynb
@@ -487,7 +487,7 @@
    ],
    "source": [
     "for i_split, split in enumerate(splits):\n",
-    "    ds = stvqa_task1[i_split].map(load_image, writer_batch_size=64, cache_file_name=f\"{split}.cache\")\n",
+    "    ds = stvqa_task1[i_split].map(load_image, writer_batch_size=64, cache_file_name=f\"{task}{split}.cache\")\n",
     "    ds = ds.cast_column('image', Image())\n",
     "    ds.push_to_hub(\"danjacobellis/stvqa_task1\", split=split)"
    ]
