--- a/FIC/paligemma_docvqa.ipynb
+++ b/FIC/paligemma_docvqa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "01bfb329-be53-457a-a199-5c0492274190",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "from PIL import Image\n",
     "from datasets import load_dataset\n",
     "from anls_star import anls_score\n",
+    "from fastprogress.fastprogress import progress_bar\n",
     "import requests\n",
     "import torch"
    ]
@@ -285,31 +286,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "058ed3e5-9e45-45b7-8a0c-0d4c3b02c035",
+   "execution_count": 32,
+   "id": "d6efb339-94bb-4e26-b8a9-b753cc270ccb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1/8/93'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pred"
+    "def compute_score_896(item):\n",
+    "    prompt = item['question']\n",
+    "    image = item['image'].resize((896, 896), resample=Image.Resampling.LANCZOS).convert(\"RGB\")\n",
+    "    model_inputs = processor(text=prompt, images=image, return_tensors=\"pt\").to(model.device)\n",
+    "    input_len = model_inputs[\"input_ids\"].shape[-1]\n",
+    "    with torch.inference_mode():\n",
+    "        generation = model.generate(**model_inputs, max_new_tokens=100, do_sample=False)\n",
+    "        generation = generation[0][input_len:]\n",
+    "        pred = processor.decode(generation, skip_special_tokens=True)\n",
+    "    score, _ = anls_score(item['answer'], pred, return_gt=True)\n",
+    "    return score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "123cc117-701d-46bf-8d0d-5f3e795ac4aa",
+   "execution_count": null,
+   "id": "bf90fe72-b4cd-4c64-99f0-9296c2b0b06e",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      <progress value='121' class='' max='39463' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.31% [121/39463 00:42&lt;3:48:30]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -317,21 +361,15 @@
       "/home/dgj335/.local/lib/python3.10/site-packages/anls_star/anls_star.py:513: UserWarning: Treating ground truth as a list of options. This is a compatibility mode for ST-VQA-like datasets.\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "score, closest_gt = anls_score(ds[0]['answer'], pred, return_gt=True)\n",
-    "score"
+    "scores = []\n",
+    "for item in progress_bar(ds):\n",
+    "    score = compute_score(item)\n",
+    "    scores.append(score)\n",
+    "average_score = sum(scores) / len(scores)\n",
+    "average_score"
    ]
   }
  ],
