--- a/FIC/docvqa/docvqa.ipynb
+++ b/FIC/docvqa/docvqa.ipynb
@@ -75,6 +75,7 @@
     "for i_split, split in enumerate(splits):\n",
     "    path = []\n",
     "    question = []\n",
+    "    questionId = []\n",
     "    answer = []\n",
     "    with open(label_files[i_split], 'r') as f:\n",
     "        split_info = json.load(f)\n",
@@ -82,6 +83,7 @@
     "    for sample in data:\n",
     "        path.append(\"spdocvqa_images/\" + sample['image'].split(\"/\")[1])\n",
     "        question.append(sample['question'])\n",
+    "        questionId.append(sample['questionId'])\n",
     "        if i_split == 2:\n",
     "            answer.append([\"Test server is available at rrc.cvc.uab.es\"])\n",
     "        else:\n",
@@ -89,6 +91,7 @@
     "    docvqa.append(Dataset.from_dict({\n",
     "        'path':path,\n",
     "        'question':question,\n",
+    "        'questionId':questionId,\n",
     "        'answer':answer\n",
     "    }))"
    ]
@@ -117,7 +120,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cc99357bc794cf6b30ecd75ff528690",
+       "model_id": "fd584d0d0456439296eebda6a140adb3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/39463 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb533ec7605b4ef38006587a3f238973",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02619adf910840fcaa480af5d74711a0",
+       "model_id": "8febd0fc2e794df5a78505a093653e0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4393af28ab6040359b4cbec06ae80673",
+       "model_id": "e9e71ebfc0f648d3bf3cc7d65f81fbc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5391988218234c3aa655bc8e9884ec37",
+       "model_id": "c5a6667486174416b40b02e9e8e63fad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,147 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d463e82d2de449ea8a1d97b633bf6cd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/7 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27b615912829414ca36f498ec4371db0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/693 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0154a648a3ed4d8291d2c2f806dc380a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/7 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2500a8f8155466f8954d2c7bc6b7982",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/693 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c24ef14d4bdf413fb7d879598aec7e5b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/7 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c0ac9939072446ab733b3c251e87242",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/693 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65bf5b3878f74cadad6d8863d4d05ea3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/7 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b032e37438cf4dccbcc1b0923f2081bf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/693 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed6c416ab1cf41d8b4aac3f1a26f2446",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/7 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11e560cbf3fc486692769f0a4782df89",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/693 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "461e1b7a32cd4c8ead00243d622a302f",
+       "model_id": "9a4a9d5a76ce4b0ea3ffe30fdb5cd907",
        "version_major": 2,
        "version_minor": 0
       },
@@ -335,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3406a1c-29dc-4ba3-90c4-a7be951a1159",
+   "id": "e2a21b58-c788-4257-acf6-eb0fa5b7d22b",
    "metadata": {},
    "outputs": [],
    "source": []
