separate mapping and uploading

--- a/FIC/docvqa/docvqa.ipynb
+++ b/FIC/docvqa/docvqa.ipynb
@@ -113,28 +113,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bf297106-18a8-4bcc-8994-9b82285f8c26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i_split, split in enumerate(splits):\n",
+    "    docvqa[i_split] = docvqa[i_split].map(load_image, writer_batch_size=1024, cache_file_name=f\"{split}.cache\")\n",
+    "    docvqa[i_split] = docvqa[i_split].cast_column('image', Image())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f48db5b-0913-4cbd-bc5a-7df07f35433a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd584d0d0456439296eebda6a140adb3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/39463 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb533ec7605b4ef38006587a3f238973",
+       "model_id": "5f319f5e0f834eb387c133b9b05c730d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8febd0fc2e794df5a78505a093653e0d",
+       "model_id": "ab0d28103e494f65a3dde56d15687de2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9e71ebfc0f648d3bf3cc7d65f81fbc3",
+       "model_id": "f5c2462a3aa147b694c1fd9a0897a5f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5a6667486174416b40b02e9e8e63fad",
+       "model_id": "3569cdeb562d4ddb90146078f2e5dbb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a4a9d5a76ce4b0ea3ffe30fdb5cd907",
+       "model_id": "f739065a8e674f64bde5d0559d540556",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,18 +202,8 @@
    ],
    "source": [
     "for i_split, split in enumerate(splits):\n",
-    "    ds = docvqa[i_split].map(load_image, writer_batch_size=64, cache_file_name=f\"{split}.cache\")\n",
-    "    ds = ds.cast_column('image', Image())\n",
-    "    ds.push_to_hub(\"danjacobellis/docvqa\", split=split)"
+    "    docvqa[i_split].push_to_hub(\"danjacobellis/docvqa\", split=split)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2a21b58-c788-4257-acf6-eb0fa5b7d22b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
