--- a/FIC/pred_to_json.ipynb
+++ b/FIC/pred_to_json.ipynb
@@ -1,171 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d2a3cb0a-15e9-4324-bbf8-5c4cf121334a",
-   "metadata": {},
-   "source": [
-    "https://rrc.cvc.uab.es/?com=contestant"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "e8f64a74-c3f5-41d0-bb26-2c9c53104835",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
-    "import json"
+    "import json\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datasets import load_dataset, Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "739f7505-c31f-44c9-bfc0-842789feade4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "477def59bf2545e686dadf4048f56140",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/546 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01d72d8b1dc6414aa2d3a1b75ad8e4d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/109M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b55202f4f8a64954806effb226cff8a9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/111M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15c803efb61642fb882a0a36ed4c6096",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/124M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba524c7eda7a42ed8fe589b883f4cc00",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/139M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db10bb60fc544ae8ac980be66b67d69a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/138M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b99f9fe25715409eae1b785ae215f2f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/135M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5015349590c4450a27c53b0cfe058e1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/161M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcd1570765314d73b84dbdc3fbeb486a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/196M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6869fbb20cad42ae9474893653befabd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/5188 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds = load_dataset(\"danjacobellis/docvqa_paligemma896\",split='test')\n",
     "question_ids = ds['questionId']"
@@ -187,10 +40,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d50bb0d0-16e9-4a2d-bea7-e3b90283e20a",
+   "id": "d2a3cb0a-15e9-4324-bbf8-5c4cf121334a",
    "metadata": {},
    "source": [
-    "results were 40, 81, 85"
+    "https://rrc.cvc.uab.es/?com=contestant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2671e0e8-658e-40eb-a393-cf166d3b2a53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8413126450243332\n",
+      "0.8095888924511818\n",
+      "0.3941939240236093\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rr in ['1x', '4x', '16x']:\n",
+    "    scores = []\n",
+    "    with open(f\"pixels_{rr}.csv\", 'r') as file:\n",
+    "        for line in file:\n",
+    "            parts = line.split(';')\n",
+    "            if len(parts) > 2:\n",
+    "                try:\n",
+    "                    score = float(parts[2])\n",
+    "                    scores.append(score)\n",
+    "                except ValueError:\n",
+    "                    continue\n",
+    "    print(np.mean(scores))"
    ]
   }
  ],
